# david_hasselhaas

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: autogen_docs.py  tree-sitter_pattern-matching-with-queries.md
docs/autogen_docs/: autogen_docs_concatenated.md
haas/agents/: GPT4Agent.py  gpt4_agent.py
haas/filters/: filter.py  pager_filter.py  restrict_path_to_dir.py  shell_command_filter.py
haas/lib/agent_manager/: __init__.py  agent_manager.py  agent_state_machine.py
haas/prompts/: autonomous_swarm_agent_builder.md  autonomous_swarm_agent_builder.txt  autonomous_swarm_head_of_security_and_code_review.md  developer_agent_instructions.md
haas/tools/: agent_management.py  create_agent.py  list_agents.py  list_directory.py  read_code_from_file.py  read_text_from_file.py  receive_from_agent.py  run_python_test.py  send_to_agent.py  shell_execute.py  tool.py  web_retrieve.py  write_text_to_file.py  write_whole_text_file.py
memories/: tree-sitter-tool-implementation-details.md
sdetGPT/memgpt/: main.py
tests/: test_pager_filter.py
tests/haas/tools/: test_read_code_from_file.py  test_shell_execute.py  test_web_retrieve.py
