[tool.poetry]
name = "sdetgpt"
version = "0.1.0"
description = ""
authors = ["Brian Finney <brian.finney@mybrightwheel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyautogen = {git = "https://github.com/microsoft/autogen"}
openai = "^1.1.1"
inflection = "^0.5.1"
transitions = "^0.9.0"
tree-sitter = "^0.20.4"
tree-sitter-languages = "^1.8.0"
tree-sitter-requirements = "^0.1.5"
tree-sitter-parsers = "^0.0.7"
tree-sitter-types = "^0.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
